<resources>
    <string name="app_name">Math Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about">About</string>
    <string name="addition">Addition</string>
    <string name="deduction">Deduction</string>
    <string name="game_over">Game Over</string>
    <string name="rules">Rules</string>
    <string name="start">Start</string>
    <string name="welcome_to_play_math_game">Welcome to play Math Game!</string>
    <string name="choose_game">Choose Game:</string>
    <string name="about_text" translatable="false">Christa Eloranta\n2024\n\nMobiiliohjelmointi\nR504TL112-3006</string>
    <string name="rules_text">Objective:\n
    Solve addition and subtraction problems to earn as many points as possible.\n\n
    Scoring:\n
    Earn points for each correctly solved math problem.\n\n
    Tasks:\n
    Encounter various addition and subtraction challenges.\n\n
    Time:\n
    The clock is ticking for each task.</string>
    <string name="welcome_to_deductions">Welcome to count deductions!</string>
    <string name="exercise">Exercise</string>
    <string name="points">Points</string>
    <string name="timer">Timer</string>
    <string name="check">Check</string>
    <string name="welcome_to_sum_up">Welcome to Sum Up</string>
    <string name="play_again">Play Again</string>
    <string name="game_over_text">Game Over</string>
    <string name="you_counted">You counted</string>
    <string name="thanks_sums">Thank you for counting sums</string>
    <string name="thanks_deductions">Thank you for calculating deductions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>