<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameOverFragment" >

        <TextView
            android:id="@+id/textView7"
            style="@style/HeadingStyle"
            android:layout_marginTop="50dp"
            android:text="@string/game_over_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            style="@style/TextStyle"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:text="@string/you_counted"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView12"
            style="@style/TextStyle"
            android:layout_marginTop="15dp"
            android:text="@string/points"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView13"
            style="@style/TextStyle"
            android:layout_marginTop="15dp"
            android:text="@string/timer"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textViewPointsOver"
            style="@style/TextStyle2"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toEndOf="@+id/textView12" />

        <TextView
            android:id="@+id/textViewTimerOver"
            style="@style/TextStyle2"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintStart_toStartOf="@+id/textViewPointsOver" />

        <Button
            android:id="@+id/buttonAgain"
            style="@style/ButtonStyle"
            android:layout_marginTop="50dp"
            android:text="@string/play_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>