<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AdditionFragment" >

        <TextView
            android:id="@+id/textView3"
            style="@style/HeadingStyle"
            android:layout_marginTop="50dp"
            android:text="@string/welcome_to_sum_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextStyle"
            android:layout_marginStart="210dp"
            android:layout_marginTop="20dp"
            android:text="@string/exercise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textViewExcerciseNumberA"
            style="@style/TextStyle2"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView9"
            style="@style/TextStyle"
            android:layout_marginTop="15dp"
            android:text="@string/points"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textViewPointsA"
            style="@style/TextStyle2"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textViewExcerciseNumberA" />

        <TextView
            android:id="@+id/textView11"
            style="@style/TextStyle"
            android:layout_marginTop="15dp"
            android:text="@string/timer"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textViewTimerA"
            style="@style/TextStyle2"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textViewPointsA" />

        <TextView
            android:id="@+id/textViewCalculationSum"
            style="@style/SubHeadingStyle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="-10dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCalculationSum"
            app:layout_constraintStart_toEndOf="@+id/textViewCalculationSum" />

        <Button
            android:id="@+id/buttonCheckSum"
            style="@style/ButtonStyle"
            android:layout_marginTop="20dp"
            android:text="@string/check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>