<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DeductionFragment" >

        <TextView
            android:id="@+id/textView2"
            style="@style/HeadingStyle"
            android:layout_marginTop="50dp"
            android:text="@string/welcome_to_deductions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextStyle"
            android:layout_marginStart="210dp"
            android:layout_marginTop="20dp"
            android:text="@string/exercise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textViewExcerciseNumber"
            style="@style/TextStyle2"
            android:layout_marginStart="20dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextStyle"
            android:layout_marginTop="15dp"
            android:text="@string/points"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textViewPoints"
            style="@style/TextStyle2"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textViewExcerciseNumber" />

        <TextView
            android:id="@+id/textView8"
            style="@style/TextStyle"
            android:layout_marginTop="15dp"
            android:text="@string/timer"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textViewTimer"
            style="@style/TextStyle2"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textViewPoints" />

        <TextView
            android:id="@+id/textViewCalculation"
            style="@style/SubHeadingStyle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text=""
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="-10dp"
            android:ems="10"
            android:inputType="number|numberSigned"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCalculation"
            app:layout_constraintStart_toEndOf="@+id/textViewCalculation" />

        <Button
            android:id="@+id/buttonCheckDeduction"
            style="@style/ButtonStyle"
            android:layout_marginTop="20dp"
            android:text="@string/check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>